--- a/templates/adm/base_adm.html
+++ b/templates/adm/base_adm.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="header-container">
-        <h1 class="service-title">Central de Serviços</h1>
+        <h1 class="service-title">{% block header_title %}Central de Serviços{% endblock %}</h1>
         <div class="user-profile">
             <span style="font-size: 2em;">&#x1F934;</span>
             <a href="#" class="user-profile">Perfil de Administrador</a>
