--- a/templates/adm/empregados/incluir.html
+++ b/templates/adm/empregados/incluir.html
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
             <label> Telefone</label>
-            <input type="tel" id="tel_empregado" name="tel_empregado" required>
+            <input type="tel" id="tel_empregado" name="tel_empregado" maxlength="14" required>
         </div>
         <!--ramal e senha-->
         <div class="form-group">
