--- a/templates/adm/ocorrencias/incluir.html
+++ b/templates/adm/ocorrencias/incluir.html
@@ -31,10 +31,10 @@
             <label>Status:</label>
             <div class="radio-group">
                 <label for="sts_ativo">
-                    <input type="radio" id="sts_ativo" name="sts_local" value="A" required checked> Ativo
+                    <input type="radio" id="sts_ativo" name="sts_tipo_ocorrencia" value="A" required checked> Ativo
                 </label>
                 <label for="sts_inativo">
-                    <input type="radio" id="sts_inativo" name="sts_local" value="I" required> Inativo
+                    <input type="radio" id="sts_inativo" name="sts_tipo_ocorrencia" value="I" required> Inativo
                 </label>
             </div>
         </div>
