--- a/templates/adm/prestadores/incluir.html
+++ b/templates/adm/prestadores/incluir.html
@@ -43,11 +43,11 @@
         <div class="form-group">
             <label>Status:</label>
             <div class="radio-group">
-                <label for="sts_ativo">
-                    <input type="radio" id="sts_ativo" name="sts_local" value="A" required checked> Ativo
+                <label for="sts_ativo_prestador">
+                    <input type="radio" id="sts_ativo_prestador" name="sts_prestador" value="A" required checked> Ativo
                 </label>
-                <label for="sts_inativo">
-                    <input type="radio" id="sts_inativo" name="sts_local" value="I" required> Inativo
+                <label for="sts_inativo_prestador">
+                    <input type="radio" id="sts_inativo_prestador" name="sts_prestador" value="I" required> Inativo
                 </label>
             </div>
         </div>
