Correção de falhas Local e ocorrencias

--- a/templates/adm/locais/alterar.html
+++ b/templates/adm/locais/alterar.html
@@ -6,8 +6,8 @@
     <form method="POST" action="/adm/locais/salvar_alterar">
         <input type="hidden" name="idt_local" value="{{ local.idt_local }}">
         <div class="form-group">
-            <label for="dsc_local">Descrição:</label>
-            <input type="text" id="dsc_local" name="dsc_local" maxlength="150" required value="{{ local.dsc_local }}">
+            <label for="nme_local">Descrição:</label>
+            <input type="text" id="nme_local" name="nme_local" maxlength="150" required value="{{ local.nme_local }}">
         </div>
         <div class="form-group">
             <label>Status:</label>
