--- a/templates/adm/ocorrencias/alterar.html
+++ b/templates/adm/ocorrencias/alterar.html
@@ -6,8 +6,8 @@
     <form method="POST" action="/adm/ocorrencias/salvar_alterar">
         <input type="hidden" name="idt_tipo_ocorrencia" value="{{ ocorrencia.idt_tipo_ocorrencia }}">
         <div class="form-group">
-            <label for="dsc_tipo_ocorrencia">Descrição:</label>
-            <input type="text" id="dsc_tipo_ocorrencia" name="dsc_tipo_ocorrencia" maxlength="150" required value="{{ ocorrencia.dsc_tipo_ocorrencia }}">
+            <label for="nme_tipo_ocorrencia">Descrição:</label>
+            <input type="text" id="nme_tipo_ocorrencia" name="nme_tipo_ocorrencia" maxlength="150" required value="{{ ocorrencia.dsc_tipo_ocorrencia }}">
         </div>
         <div class="form-group">
             <label>Status:</label>
