Correção de bug - alterar ocorrencia

--- a/templates/adm/ocorrencias/alterar.html
+++ b/templates/adm/ocorrencias/alterar.html
@@ -7,7 +7,7 @@
         <input type="hidden" name="idt_tipo_ocorrencia" value="{{ ocorrencia.idt_tipo_ocorrencia }}">
         <div class="form-group">
             <label for="nme_tipo_ocorrencia">Descrição:</label>
-            <input type="text" id="nme_tipo_ocorrencia" name="nme_tipo_ocorrencia" maxlength="150" required value="{{ ocorrencia.dsc_tipo_ocorrencia }}">
+            <input type="text" id="nme_tipo_ocorrencia" name="nme_tipo_ocorrencia" maxlength="150" required value="{{ ocorrencia.nme_tipo_ocorrencia }}">
         </div>
         <div class="form-group">
             <label>Status:</label>
