--- a/templates/adm/locais/incluir.html
+++ b/templates/adm/locais/incluir.html
@@ -14,11 +14,11 @@
         </div>
         <div class="form-group">
             <label for="lat_local">Latitude decimal do local:</label>
-            <input type="number" id="lat_local" name="lat_local" step="any" min="-180" max="180" required>
+            <input type="float" id="lat_local" name="lat_local" min="-180" max="180" required>
         </div>
         <div class="form-group">
             <label for="lgt_local">Longitude decimal do local:</label>
-            <input type="number" id="lgt_local" name="lgt_local" step="any" min="-180" max="180" required>
+            <input type="float" id="lgt_local" name="lgt_local"  min="-180" max="180" required>
         </div>
         <div>
             <label for="cod_setor">Setor:</label>
